src_old/objects/ImportRequestQueue__c.object
<CustomObject>
    <description>Import Request Queue</description>
    <fields>
        <fullName>Datasource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Datasource</label>
        <referenceTo>Datasource__c</referenceTo>
        <relationshipLabel>DatasourceInfos</relationshipLabel>
        <relationshipName>DatasourceInfo_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email Notified</description>
        <label>Notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <label>Reuqest Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Requestorss</relationshipLabel>
        <relationshipName>Requestors_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Processing Result</label>
        <length>8192</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Init</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ImportRequestQueue</label>
    <nameField>
        <displayFormat>IRQ-{0000000000}</displayFormat>
        <label>ImportRequestQueue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ImportRequestQueues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>